--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     padding: 0;
     margin: 0;
     background-color: dimgray;
+    font-family: 'Press Start 2P', cursive;
+
 }
 
 .container-header p {
@@ -55,16 +57,12 @@ img {
     padding-top: 10%;
 }
 
-.button-container img {
-    padding: 10px;
-    border: #e3e3e3 1px solid;
-}
+.button-container img {}
 
 .container-computer {}
 
 .button button {
     margin: 7px;
-    cursor: pointer;
 }
 
 .footer {
@@ -75,7 +73,7 @@ img {
 }
 
 #footer p {
-    font-size: 30px;
+    font-size: 20px;
 }
 
 .result {
