--- a/style.css
+++ b/style.css
@@ -57,6 +57,8 @@ img {
     padding-top: 10%;
 }
 
+.disapear {}
+
 .button-container img {}
 
 .container-computer {}
@@ -85,4 +87,12 @@ img {
 .selectedValues {
     display: flex;
     justify-content: center;
+}
+
+#show {
+    display: none;
+}
+
+.playerLost {
+    display: none;
 }
